// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventOrGroupHeader Event hides level tag 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": undefined,
      "eventID": "eventID",
      "groupID": "groupID",
      "id": "id",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "default",
    }
  }
  hideLevel={true}
  includeLink={true}
  projectId="projectId"
  size="normal"
/>
`;

exports[`EventOrGroupHeader Event renders with \`type = csp\` 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": undefined,
      "eventID": "eventID",
      "groupID": "groupID",
      "id": "id",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "csp",
    }
  }
  includeLink={true}
  params={
    Object {
      "orgId": "orgId",
    }
  }
  size="normal"
/>
`;

exports[`EventOrGroupHeader Event renders with \`type = default\` 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": undefined,
      "eventID": "eventID",
      "groupID": "groupID",
      "id": "id",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "default",
    }
  }
  includeLink={true}
  params={
    Object {
      "orgId": "orgId",
    }
  }
  size="normal"
/>
`;

exports[`EventOrGroupHeader Event renders with \`type = error\` 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": undefined,
      "eventID": "eventID",
      "groupID": "groupID",
      "id": "id",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "error",
    }
  }
  includeLink={true}
  params={
    Object {
      "orgId": "orgId",
    }
  }
  size="normal"
/>
`;

exports[`EventOrGroupHeader Group renders with \`type = csp\` 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": "culprit",
      "id": "id",
      "level": "error",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "csp",
    }
  }
  includeLink={true}
  params={
    Object {
      "orgId": "orgId",
    }
  }
  size="normal"
/>
`;

exports[`EventOrGroupHeader Group renders with \`type = default\` 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": "culprit",
      "id": "id",
      "level": "error",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "default",
    }
  }
  includeLink={true}
  params={
    Object {
      "orgId": "orgId",
    }
  }
  size="normal"
/>
`;

exports[`EventOrGroupHeader Group renders with \`type = error\` 1`] = `
<EventOrGroupHeader
  data={
    Object {
      "culprit": "culprit",
      "id": "id",
      "level": "error",
      "metadata": Object {
        "directive": "metadata directive",
        "message": "metadata message",
        "title": "metadata title",
        "type": "metadata type",
        "uri": "metadata uri",
        "value": "metadata value",
      },
      "type": "error",
    }
  }
  includeLink={true}
  orgId="orgId"
  size="normal"
/>
`;
